13-Ingress-ExternalDNS-Hostname-Based-Routing/kube-manifests/04-IngressService-Manifests/01-Ingress-Hostname-Based-Routing-app1-app2.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app1-app2
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: capp1.kubeoncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: app1-nginx-clusterip-service
          servicePort: 80
  - host: capp2.kubeoncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: app2-nginx-clusterip-service
          servicePort: 80
