13-Ingress-ExternalDNS-Hostname-Based-Routing/kube-manifests/04-IngressService-Manifests/02-Ingress-Hostname-Based-Routing-app3.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-app3
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eapp3.kubeoncloud.com    
    http:
      paths:
      - path: /
        backend:
          serviceName: usermgmt-webapp-clusterip-service
          servicePort: 80
